@@ -3,6 +3,8 @@ Changelog
 
 7.8-dev - (unreleased)
 ----------------------
+* Change: sort by getObjPositionInParent the Data Files within dataset_view
+  [ichimdav refs #17335]
 
 7.7 - (2013-10-22)
 ------------------
